welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:57: error: not found: value COLOR
  makeFlower(COLOR.BLUE)
             ^